--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,9 @@
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
+      <li>
+        <a href="mailto:hamool111@gmail.com?subject=Feedback on Hamool's corner blog">Email Me</a>  
+      </li>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
