--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
       <p class="lead">{{ site.description }}</p>
     </div>
 
-    <ul class="sidebar-nav" style="display:inline">
+    <ul class="sidebar-nav" style="display: inline;">
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
