--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -86,7 +86,7 @@ html {
 /* Sidebar nav */
 .sidebar-nav {
   padding-left: 0;
-  list-style: none;
+  list-style: inline;
 }
 .sidebar-nav-item {
   display: block;
