--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
       </li>
-      <li>
+      <li class="sidebar-nav-item">
         <strong>|</strong>
       </li>
       <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
